--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h2 style="margin: 0.0px 0.0px 8.0px 0.0px; font: 16.0px Helvetica; color: #fd9009; -webkit-text-stroke: #fd9009"><span class="s1"><b>Welcome</b></span></h2>
-<h1 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 22.0px 'Helvetica Light'; color: #000000; color: rgba(0, 0, 0, 0.6); -webkit-text-stroke: rgba(0, 0, 0, 0.6)"><span class="s1">The Hello World</span></h1>
+<h1 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 22.0px 'Helvetica Light'; color: #000000; color: rgba(0, 0, 0, 0.6); -webkit-text-stroke: rgba(0, 0, 0, 0.6)"><span class="s1">The Hello World !S</span></h1>
 <p class="p3"><span class="s2">You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</span></p>
 </body>
 </html>
